<resources>
    <string name="app_name">&appname;</string>
    <string name="layout_direction">0</string>
    <string name="base_url" translatable="false">"http://gofergrocery.trioangle.com/api/"</string>
    <string name="imageurl" translatable="false">"http://gofergrocery.trioangle.com/images/"</string>
    <string name="siteurl" translatable="false">"http://gofergrocery.trioangle.com/"</string>
    <string name="pdfDoc_url" translatable="false">"http://gofergrocery.trioangle.com/storage/images/driver/"</string>
    <string name="google_maps_key" translatable="false">AIzaSyCO4JTEK90hi9W8f56C3ZPvEJWJtplXMVg</string>
    <string name="terms_url" translatable="false">"about/terms"</string>
    <string name="privacy_url" translatable="false">"about/privacy"</string>
    <string name="package_name_eater" translatable="false">com.trioangle.gofergroceryuser</string>
    <string name="network_failure">Please check your Internet Connection</string>
    <string name="internal_server_error">Please try again after sometimes.</string>
    <string name="documents">"DOCUMENTS"</string>
    <string name="doc">"Please upload your documents."</string>
    <string name="personaldoc">"Please upload your personal \n documents."</string>
    <string name="vehicledoc_msg">"To drive with &appname; your vehicle must be a mid-size or full-size sedan that comfortably seats 4-8 passengers."</string>
    <string name="driverlicense_back">"Driver's License - (Back/Reverse)"</string>
    <string name="driverlicense_front">"Driver's License - (Front)"</string>
    <string name="motor_insurance">"Motor Insurance Certificate"</string>
    <string name="registeration">"Certificate of Registration"</string>
    <string name="contract_carriage">"Contract Carriage Permit"</string>
    <string name="continuec">"CONTINUE"</string>
    <string name="log_in">Log In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="takephoto">"Take a photo of your"</string>
    <string name="takephoto_msg">"Please make sure we can easily read all the details."</string>
    <string name="taptoadd">"TAP TO ADD"</string>
    <string name="taptochange">"TAP TO CHANGE"</string>
    <string name="getmobilenumber">Enter your mobile number</string>
    <string name="first">"First Name"</string>
    <string name="last">"Last Name"</string>
    <string name="email">"Email"</string>
    <string name="paypalemail">"PAYPAL EMAIL"</string>
    <string name="address1">"ADDRESS 1"</string>
    <string name="address2">"ADDRESS 2"</string>
    <string name="city">"City"</string>
    <string name="state">"STATE"</string>
    <string name="postalcode">"POSTAL CODE"</string>
    <string name="resetpasswords">Reset your password</string>
    <string name="signin">"SIGN IN"</string>
    <string name="password">"Password"</string>
    <string name="forgotpassword">"FORGOT PASSWORD?"</string>
    <string name="error_msg_vehiclename">"Please enter your vehicle name"</string>
    <string name="error_msg_vehiclenumber">"Please enter your vehicle number"</string>
    <string name="error_msg_firstname">"Please enter your first name"</string>
    <string name="error_msg_lastname">"Please enter your last name"</string>
    <string name="error_msg_email">"Please enter a valid email address"</string>
    <string name="error_msg_phone">"Please enter a valid mobile number"</string>
    <string name="error_msg_password">"Please enter minimum 6 characters"</string>
    <string name="register">"REGISTER"</string>
    <string name="vehicle">"VEHICLE DETAILS"</string>
    <string name="vehicle_name">"Vehicle Name / eg: Toyoto Camry, Honda Accord..."</string>
    <string name="vehicle_number">"Vehicle Number / eg: WNF 382"</string>
    <string name="looking">"LOOKING FOR THE USER APP?"</string>
    <string name="signupwithrider">"SIGN UP WITH USER ACCOUNT"</string>
    <string name="or">"OR"</string>
    <string name="enter4digit">Enter the 4-digit code sent to you at </string>
    <string name="resend">Resend Code</string>
    <string name="otp_mismatch">"OTP code Mismatch."</string>
    <string name="otp_emty">"Please enter the OTP"</string>
    <string name="InvalidMobileNumber">Invalid mobile number</string>
    <string name="InvalidPassword">Please enter minimum 6 characters</string>
    <string name="Passwordmismatch">Password Mismatch</string>
    <string name="Enteryourpassword">Enter your password</string>
    <string name="Confirmyourpassword">Confirm your password</string>
    <string name="profile">"PROFILE"</string>
    <string name="mobile">"MOBILE"</string>
    <string name="home">"HOME"</string>
    <string name="earnings">"EARNINGS"</string>
    <string name="account">"ACCOUNT"</string>
    <string name="offline">"Offline"</string>
    <string name="checkstatus">"Check Status"</string>
    <string name="online">"Online"</string>
    <string name="trip_id">"Trip Id : "</string>
    <string name="enroute">"En Route"</string>
    <string name="navigate">"NAVIGATE"</string>
    <string name="pickup">"Pickup"</string>
    <string name="iban_number">IBAN Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="state_province">State/Province</string>
    <string name="postal_code">Postal code</string>
    <string name="ssn">SSN</string>
    <string name="routing_number">Routing Number</string>
    <string name="clearing_code">Clearing Code</string>
    <string name="bank_name">Bank name</string>
    <string name="branch_name">Branch Name</string>
    <string name="bank_code">Bank code</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender1">Gender</string>
    <string name="address_kana">Address Kana</string>
    <string name="address_kana2">Address 2</string>
    <string name="city_kana">City</string>
    <string name="postal_code_kana">Postal code</string>
    <string name="address_kanji">Address Kanji</string>
    <string name="address_kanji1">Address 1</string>
    <string name="address_kanji2">Address 2</string>
    <string name="kanji_city">City</string>
    <string name="state_province_kanji">State/Province</string>
    <string name="postal_code_kanji">Postal code</string>
    <string name="legal_document">Legal Document</string>
    <string name="branch_code">Branch code</string>
    <string name="bsb">BSB</string>
    <string name="transit_number">Transit Number</string>
    <string name="institute_number">Institute Number</string>
    <string name="sort_code">Sort Code</string>
    <string name="account_number">Account Number</string>
    <string name="account_owner_name">Account Owner Name</string>
    <string name="dropoff">"DROP OFF"</string>
    <string name="contact_C">"CONTACT"</string>
    <string name="call">"CALL"</string>
    <string name="Cancel">Cancel</string>
    <string name="cancel">"CANCEL"</string>
    <string name="minute">"MINUTE"</string>
    <string name="minutes">"MINUTES"</string>
    <string name="help">"Help"</string>
    <string name="edit">"EDIT"</string>
    <string name="change">"CHANGE"</string>
    <string name="document_s">"Documents"</string>
    <string name="about">"About"</string>
    <string name="signout">"Sign Out"</string>
    <string name="notrip">"You have no trip"</string>
    <string name="payout">"Payout"</string>
    <string name="currencies">"Currency"</string>
    <string name="currency">"₹ "</string>
    <string-array name="language" translatable="false">
        <item>English</item>
        <item>عربى</item>
        <item>Português</item>
    </string-array>
    <string name="view">VIEW</string>
    <string name="deflang">English</string>
    <string name="vehicleinformation">Vehicle Information</string>
    <string name="thisweek_empty">"You have not driven this week"</string>
    <string name="last_trip">"Last trip: "</string>
    <string name="pay_statemet">"Pay Statements"</string>
    <string name="thisweek">"THIS WEEK"</string>
    <string name="riderfeedback">"User Feedback"</string>
    <string name="checkfeedback">"Check out feedback from users and learn how to improve"</string>
    <string name="drivingstyle">"Driving Style Dashboard"</string>
    <string name="seeyourdriving">"See your driving style profile after completing more trips"</string>
    <string name="trip_star_5">"YOUR CURRENT RATING"</string>
    <string name="current_rating">"LIFETIME TRIPS"</string>
    <string name="trip_cancel">"5 STARS"</string>
    <string name="request_accepted">"RATED TRIPS"</string>
    <string name="payment">"Payment"</string>
    <string name="addpayment">"Add Payment"</string>
    <string name="addpayout">"Add Payout"</string>
    <string name="most_recent">"Most recent payout: "</string>
    <string name="addpayment_msg">"To add a new payout. Create a email for your %1$s account. "</string>
    <string name="save">Save</string>
    <string name="tripsdetails">"TRIP DETAIL"</string>
    <string name="triphistory">"TRIP HISTORY"</string>
    <string name="trip_payment">"Trips"</string>
    <string name="pasttrip">"PAST TRIPS"</string>
    <string name="todaytrip">"TODAY'S TRIPS"</string>
    <string name="duration">"DURATION"</string>
    <string name="distance">"DISTANCE"</string>
    <string name="tripearnings">"TRIP EARNINGS"</string>
    <string name="fare">"Base Fare"</string>
    <string name="uberfee">"Access Fee"</string>
    <string name="distancefare">"Distance Fare"</string>
    <string name="timefare">"Time Fare"</string>
    <string name="estimatedpayout">"Total Payout"</string>
    <string name="totalamount">"Total Trip Fare"</string>
    <string name="oweamount">"Owe Amount"</string>
    <string name="driverpayout">"Driver Payout"</string>
    <string name="deliveryfee">"Delivery Fee"</string>
    <string name="cashcollected">"Cash Collected"</string>
    <string name="paystatement">"PAY STATEMENTS"</string>
    <string name="weeklystatement">"WEEKLY STATEMENT"</string>
    <string name="timeonline">"TIME ONLINE"</string>
    <string name="paypal_email">"PayPal Email ID"</string>
    <string name="completedtrips">"COMPLETED TRIPS"</string>
    <string name="dailyearning">"DAILY EARNINGS"</string>
    <string name="bankdeposit">"Bank Deposit"</string>
    <string name="totaluberearning">"Total Driver Earnings"</string>
    <string name="riderfaresearn">"Trips fares earned and kept."</string>
    <string name="cash_trip">"Cash Trip"</string>
    <string name="submit">"Submit</string>
    <string name="add_stripe_payout">Add Stripe Payout</string>
    <string name="select_vehicle">"Select vehicle type"</string>
    <string name="camera">Camera</string>
    <string name="camera_roll">Camera roll</string>
    <string name="please_enable_permissions">Please enable app permissions</string>
    <string name="please_enable_location">Please enable location services</string>
    <string name="ok">Ok</string>
    <string name="trip_cancel_driver">Your trip cancelled by driver</string>
    <string name="enable_permissions">Please Enable Permissions</string>
    <string name="pick_up_order">Pick up order</string>
    <string name="how_did_this_pickup_go">How did this pickup go?</string>
    <string name="next">Next</string>
    <string name="order_not_ready">Order Not Ready?</string>
    <string name="pick_up_from">Pick up from</string>
    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="orders_confirmed">Orders confirmed</string>
    <string name="payout_title">"Set up your &appname; payout method"</string>
    <string name="payout_link">"Learn more about payouts"</string>
    <string name="payout_msg">"Your payout is what you earn from trips.</string>
    <string name="delete">Delete</string>
    <string name="make_default">Make Default</string>
    <string name="defaults">Default</string>
</resources>