<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addresskana_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="30dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="gone">

    <com.obs.CustomEditText
        android:id="@+id/addresskana1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/address_1"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

    <com.obs.CustomEditText
        android:id="@+id/addresskana2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/address_kana2"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

    <com.obs.CustomEditText
        android:id="@+id/kanacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/city_kana"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

    <com.obs.CustomEditText
        android:id="@+id/kanastate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/state_province"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

    <com.obs.CustomEditText
        android:id="@+id/kanapostalcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/postal_code_kana"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />
</LinearLayout>


