<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addresskanji_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="30dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="gone">


    <com.obs.CustomEditText
        android:id="@+id/addresskanji1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/address_kanji1"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

    <com.obs.CustomEditText
        android:id="@+id/addresskanji2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/address_kanji2"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

    <com.obs.CustomEditText
        android:id="@+id/kanjicity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/kanji_city"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

    <com.obs.CustomEditText
        android:id="@+id/kanjistate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/state_province_kanji"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

    <com.obs.CustomEditText
        android:id="@+id/kanjipostalcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/d_bottom"
        android:hint="@string/postal_code_kanji"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/text_shadow"
        android:textColorHint="@color/app_green"
        android:textSize="@dimen/midi" />

</LinearLayout>

