<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="gofereatsdriver.views.signinsignup.DocumentUploadActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <com.obs.CustomTextView
        style="@style/ClanProForUBER_Book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal"
        android:paddingTop="@dimen/margin_normal"
        android:text="@string/takephoto"
        android:textColor="@color/app_text_black4"
        android:textSize="@dimen/text_xlarge" />

    <com.obs.CustomTextView
        android:id="@+id/tvDocTitle"
        style="@style/ClanProForUBER_News"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal"
        android:text="@string/contract_carriage"
        android:textColor="@color/app_text_black"
        android:textSize="@dimen/text_xxlarge" />

    <com.obs.CustomTextView
        style="@style/ClanProForUBER_Book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:paddingEnd="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal"
        android:text="@string/takephoto_msg"
        android:textColor="@color/app_text_black4"
        android:textSize="@dimen/text_normal" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/margin_normal"
        android:src="@drawable/v_doc" />

    <TextView
        android:id="@+id/tvPdfName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:ellipsize="end"
        android:paddingEnd="@dimen/margin_xlarge"
        android:paddingStart="@dimen/margin_xlarge"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/textblack"
        android:textSize="@dimen/text_normal"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rltTapToAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_normal">

        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/camera"
            android:backgroundTint="@color/app_green"/>

        <com.obs.CustomTextView
            android:id="@+id/tvTapToAdd"
            style="@style/ClanProForUBER_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_toEndOf="@id/ivCamera"
            android:text="@string/taptoadd"
            android:textColor="@color/app_green"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>
